syntax = "proto3";

package loki;

service LokiService {
    rpc ExecuteScript(ExecuteScriptRequest) returns (ExecuteScriptResponse);
    rpc CallTool(CallToolRequest) returns (CallToolResponse);
}

message ExecuteScriptRequest {
    string script_id = 1;
    string script_content = 2;
    string script_type = 3;
    map<string, string> parameters = 4;
}

message ExecuteScriptResponse {
    bool success = 1;
    string output = 2;
    string error = 3;
}

message CallToolRequest {
    string device_id = 1;
    string tool_name = 2;
    string parameters_json = 3;
}

message CallToolResponse {
    bool success = 1;
    string result_json = 2;
    string error = 3;
}
